fixed css backgroung images

--- a/styles/media_queries.css
+++ b/styles/media_queries.css
@@ -2,7 +2,7 @@
   /* CSS rules for small screens */
   body > div.container {
     padding: 2rem;
-    background: url("../assets/bg.svg");
+    background: url("assets/bg.svg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
