--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,56 @@ section#skills > div.content {
   box-shadow: var(--backdrop);
 }
 
+#modal-overlay {
+  height: 100vh;
+  width: 100vw;
+  position: absolute;
+  background-color: var(--dark-sf);
+  opacity: 30%;
+  z-index: 99;
+}
+
+.visible {
+  visibility: visible;
+}
+
+.hidden {
+  visibility: hidden;
+}
+
+#expanded-nav {
+  position: absolute;
+  display: flex;
+  align-items: end;
+  justify-content: center;
+  padding: 5rem 0;
+  height: 100vh;
+  top: 0;
+  right: 0;
+  background-color: var(--darker-sf);
+  box-shadow: -4px 3px 7px rgba(0, 0, 0, 0.16);
+  width: 202px;
+  z-index: 100;
+}
+
+#expanded-nav > ul {
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+#expanded-nav > ul > li {
+  list-style: none;
+}
+
+#expanded-nav > ul > li > a {
+  font-weight: var(--medium-text-weight);
+  font-size: var(--lg-text-size);
+  color: var(--light-sf);
+}
+
 div.content > p {
   text-align: center;
   margin-bottom: 30px;
