--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,44 @@
 /* Section Styling */
+header {
+  display: flex;
+  justify-content: end;
+}
+
+main {
+  max-width: 800px;
+  transition: max-width 1s ease-in-out;
+}
+
+body > div.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2rem;
+  background-image: url("../assets/bg-desktop.svg");
+  background-position: top;
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin-bottom: 25px;
+  transition: margin-bottom 0.1s ease-in-out;
+}
+
+section#about > div.content > p {
+  text-align: left;
+  margin-bottom: 0;
+  transition: all 1s ease-in-out;
+}
+
 section,
+section#skills > div.content-container,
 section#projects > div.content {
   display: grid;
   place-items: center;
   margin-bottom: 75px;
   gap: 2rem;
+  width: 100%;
 }
 
-section#skills > div.content {
+section#skills > div.content-container > div.content {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -15,6 +46,7 @@ section#skills > div.content {
   border-radius: 10px;
   padding: 30px 30px 0;
   box-shadow: var(--backdrop);
+  width: 100%;
 }
 
 div.section-header {
@@ -42,18 +74,14 @@ hr {
 }
 
 .portfolio-image {
-  width: var(--pfolio-img);
-  height: var(--pfolio-img);
+  min-width: var(--md-pfolio-img);
+  min-height: var(--md-pfolio-img);
   border-radius: 50%;
   border: 10px solid var(--dark-sf);
   background-image: url("../assets/imgs/me_500x500.png");
   background-position: center;
   background-size: cover;
-}
-
-.dark-seafoam-filter {
-  filter: invert(50%) sepia(100%) saturate(335%) hue-rotate(122deg)
-    brightness(95%) contrast(89%);
+  transition: all 1s ease-in-out;
 }
 
 .project-item {
@@ -63,6 +91,7 @@ hr {
   height: 250px;
   border-radius: 12px;
   box-shadow: var(--backdrop);
+  width: 100%;
 }
 
 .project-item-content {
@@ -86,7 +115,7 @@ hr {
   display: flex;
   justify-content: space-between;
   margin: 15px;
-  width: 25%;
+  width: 100px;
 }
 
 footer {
@@ -120,4 +149,5 @@ footer > nav > ul > li > a,
 footer > nav > ul > li > a:visited {
   color: var(--dark-sf);
   font-weight: 400;
+  margin: 0.5rem;
 }
