--- a/styles/media-queries.css
+++ b/styles/media-queries.css
@@ -1,6 +1,15 @@
 @media screen and (max-width: 768px) {
   /* CSS rules for medium screens */
 
+  header {
+    display: flex;
+    justify-content: end;
+    width: 100%;
+    height: 50px;
+    margin: 0;
+    transition: all 1s ease-in-out;
+  }
+
   body > div.container {
     display: block;
     background: url("../assets/bg-mobile.svg");
@@ -10,10 +19,6 @@
     margin-bottom: 25px;
   }
 
-  #main-navigation > ul > li:nth-of-type(3) > a {
-    color: var(--light-sf);
-  }
-
   #hamburger-icon,
   .exit-icon {
     visibility: visible;
@@ -21,7 +26,7 @@
 
   #main-navigation {
     position: fixed;
-    padding: 5rem 0;
+    padding: 5rem 0 5rem 3rem;
     height: 100vh;
     top: 0;
     background-color: var(--darker-sf);
@@ -68,13 +73,6 @@
 
 @media screen and (min-width: 769px) and (max-width: 1024px) {
   /* CSS rules for large screens */
-  header {
-    display: flex;
-    justify-content: end;
-    align-items: end;
-    width: 100%;
-    height: 50px;
-  }
 
   #main-navigation {
     width: 100%;
@@ -88,12 +86,6 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-  }
-
-  #main-navigation > ul > li > a {
-    font-weight: var(--semibold-text-weight);
-    font-size: var(--md-text-size);
-    color: var(--dark-sf);
   }
 
   section#about {
@@ -125,7 +117,7 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    background-color: var(--section-color);
+    background-color: var(--lighter-color);
     border-radius: 10px;
     padding: 30px 30px 0;
     box-shadow: var(--backdrop);
@@ -152,7 +144,7 @@
   }
 
   .project-item {
-    background-color: var(--section-color);
+    background-color: var(--lighter-color);
     padding: 15px;
     min-height: 250px;
     height: 250px;
@@ -180,14 +172,6 @@
 
 @media screen and (min-width: 1025px) and (max-width: 1200px) {
   /* CSS rules for extra-large screens */
-  header {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    height: 75px;
-    margin: 0;
-    transition: all 1s ease-in-out;
-  }
 
   #main-navigation {
     width: 100%;
@@ -202,12 +186,6 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-  }
-
-  #main-navigation > ul > li > a {
-    font-weight: var(--medium-text-weight);
-    font-size: 18px;
-    color: var(--dark-sf);
   }
 
   section#about {
@@ -229,24 +207,6 @@
 
 @media screen and (min-width: 1201px) {
   /* CSS rules for extra-extra-large screens */
-
-  body > div.container {
-    margin-bottom: 0px;
-  }
-
-  section {
-    margin-bottom: 90px;
-  }
-
-  header {
-    display: flex;
-    justify-content: end;
-    align-items: end;
-    width: 100%;
-    max-width: 1200px;
-    height: 50px;
-    transition: all 1s ease-in-out;
-  }
 
   main {
     width: 100%;
@@ -276,12 +236,6 @@
     justify-content: space-between;
   }
 
-  #main-navigation > ul > li > a {
-    font-weight: var(--semibold-text-weight);
-    font-size: var(--md-text-size);
-    color: var(--dark-sf);
-  }
-
   section#skills {
     display: flex;
     flex-direction: column;
@@ -292,7 +246,7 @@
   section#skills > div.content-container {
     display: flex;
     flex-direction: row;
-    background-color: var(--section-color);
+    background-color: var(--lighter-color);
     box-shadow: var(--backdrop);
     border-radius: 10px;
     height: 100%;
