--- a/styles/navigation.css
+++ b/styles/navigation.css
@@ -8,17 +8,40 @@
   list-style: none;
 }
 
+#main-navigation > ul > li > a {
+  font-weight: var(--medium-text-weight);
+  font-size: var(--md-text-size);
+  color: var(--dark-sf);
+  transition: all 0.125s ease-in-out;
+}
+
 #main-navigation > ul > li > a:active {
   color: var(--dark-sf);
   text-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
 }
 
+#main-navigation > ul > li > a:hover {
+  color: white;
+  text-shadow: 0 1px 5px #03383046;
+}
+
 #main-navigation > ul > li:nth-of-type(3) > a {
   font-size: var(--medium-text-weight);
   background-color: var(--dark-sf);
+  border: 1.5px solid var(--dark-sf);
   padding: 0.75rem 2rem;
   border-radius: 2px;
   color: white;
+}
+
+#main-navigation > ul > li:nth-of-type(3) > a:hover {
+  font-size: var(--medium-text-weight);
+  background-color: var(--light-sf);
+  padding: 0.75rem 2rem;
+  border-radius: 2px;
+  color: var(--dark-sf);
+  box-shadow: 0 3px 5px #03383046;
+  text-shadow: none;
 }
 
 .wave {
