--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,11 @@
 /* Section Styling */
 header {
   display: flex;
-  justify-content: end;
+  align-items: center;
+  width: 100%;
+  height: 50px;
+  margin: 0;
+  transition: all 1s ease-in-out;
 }
 
 main {
@@ -42,7 +46,7 @@ section#skills > div.content-container > div.content {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: var(--section-color);
+  background-color: var(--lighter-color);
   border-radius: 10px;
   padding: 30px 30px 0;
   box-shadow: var(--backdrop);
@@ -85,7 +89,7 @@ hr {
 }
 
 .project-item {
-  background-color: var(--section-color);
+  background-color: var(--lighter-color);
   padding: 15px;
   min-height: 250px;
   height: 250px;
