--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,7 @@ header {
   align-items: center;
   width: 100%;
   height: 50px;
+  max-width: 1080px;
   margin: 0;
   transition: all 1s ease-in-out;
 }
@@ -127,6 +128,7 @@ footer {
   align-items: center;
   justify-items: center;
   flex-direction: column;
+  max-width: 1080px;
 }
 
 footer > nav {
@@ -145,12 +147,7 @@ footer > nav > ul {
   justify-content: space-around;
 }
 
-footer > nav > ul > li {
-  list-style-type: none;
-}
-
-footer > nav > ul > li > a,
-footer > nav > ul > li > a:visited {
+footer > nav > ul > li > a {
   color: var(--dark-sf);
   font-weight: 400;
   margin: 0.5rem;
