--- a/styles/headers.css
+++ b/styles/headers.css
@@ -17,6 +17,10 @@
   --backdrop: -0.5px -0.5px 2px rgba(0, 0, 0, 0.08),
     2px 2px 2px rgba(0, 0, 0, 0.2), 12px 12px 0px var(--dark-sf),
     14px 14px 2px rgba(0, 0, 0, 0.4);
+
+  --backdrop-hover: -0.5px -0.5px 2px rgba(0, 0, 0, 0.08),
+    10px 10px 10px rgba(0, 0, 0, 0.2), 30px 20px 0px var(--dark-sf),
+    32px 22px 10px rgba(0, 0, 0, 0.4);
 }
 
 *,
