--- a/styles/media-queries.css
+++ b/styles/media-queries.css
@@ -58,17 +58,6 @@
     width: 100%;
   }
 
-  section#skills > div.content-container > div.content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    background-color: var(--lighter-color);
-    border-radius: 10px;
-    padding: 30px 30px 0;
-    box-shadow: var(--backdrop);
-  }
-
   div.section-header {
     display: grid;
     place-items: center;
@@ -184,6 +173,17 @@
     box-shadow: var(--backdrop);
     border-radius: 10px;
     height: 100%;
+    transition: all 0.25s ease-in-out;
+  }
+
+  section#skills > div.content-container:hover {
+    transform: translate(-20px, -20px);
+    box-shadow: var(--backdrop-hover);
+  }
+
+  section#skills > div.content-container > div.content:hover {
+    transform: none;
+    box-shadow: none;
   }
 
   section#skills > div.content-container > div.content {
