--- a/styles/style.css
+++ b/styles/style.css
@@ -114,7 +114,7 @@ hr {
 .project-item-content {
   display: flex;
   flex-direction: column;
-  justify-content: end;
+  justify-content: center;
   background-color: rgb(42, 42, 42);
   padding: 10px;
   height: 100%;
@@ -123,9 +123,18 @@ hr {
 
 .project-item-content > p {
   color: white;
-  padding: 0 10px 10px;
+  padding: 15px 10px 10px;
   font-size: var(--sm-text-size);
   font-weight: var(--medium-text-weight);
+}
+
+.project-item-content > a {
+  width: fit-content;
+}
+
+.project-item-content > a > h3 {
+  margin: 0;
+  width: fit-content;
 }
 
 .social-icons {
@@ -133,6 +142,17 @@ hr {
   justify-content: space-between;
   margin: 15px;
   width: 100px;
+}
+
+.social-icon {
+  filter: none;
+  fill: var(--dark-sf);
+  transition: all 0.125s ease-in-out;
+}
+
+.social-icon:hover {
+  filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.2));
+  fill: white;
 }
 
 footer {
