--- a/styles/navigation.css
+++ b/styles/navigation.css
@@ -91,11 +91,11 @@ nav > ul > li > a:hover {
   }
 
   #main-navigation > ul {
-    height: 60vh;
-    margin-top: 10vh;
+    height: 100%;
+    padding: 10vh 0;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
   }
 
@@ -141,6 +141,23 @@ nav > ul > li > a:hover {
 
   #main-navigation > ul {
     width: 45%;
+    max-width: 400px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+
+@media screen and (min-width: 1201px) {
+  #main-navigation {
+    width: 100%;
+    display: flex;
+    justify-content: end;
+    visibility: visible;
+  }
+
+  #main-navigation > ul {
+    width: 50%;
     max-width: 400px;
     display: flex;
     flex-direction: row;
