--- a/styles/navigation.css
+++ b/styles/navigation.css
@@ -112,20 +112,29 @@ nav > ul > li > a:hover {
 
   @media (orientation: landscape) {
     #main-navigation {
-      padding: 0;
+      padding: 0 0 0 15vw;
       width: 90vw;
       right: 0;
       left: 10vw;
+      justify-content: start;
     }
 
     #main-navigation > ul {
       height: 100%;
-      width: 100%;
-      padding: 0 2vw 0 12vw;
+      width: fit-content;
+      /* padding: 10vh 2vw 10vh 25vw; */
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
       justify-content: space-between;
       align-items: center;
+    }
+
+    .exit-icon {
+      top: 0;
+      right: 0;
+      margin: 20px 100px 0 0;
+      width: 90px;
+      height: 60px;
     }
   }
 }
