--- a/styles/media-queries.css
+++ b/styles/media-queries.css
@@ -16,7 +16,7 @@
     opacity: 0;
   }
 
-  header > nav > ul > li:nth-of-type(4) {
+  header > nav > ul > li:nth-of-type(5) {
     visibility: visible;
     position: relative;
   }
@@ -168,20 +168,13 @@
     transition: all 1s linear;
   }
 
-  section#skills {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100%;
-  }
-
   section#skills > div.content-container {
     display: flex;
     flex-direction: row;
     background-color: var(--lighter-color);
     box-shadow: var(--backdrop);
     border-radius: 10px;
-    height: 100%;
+    height: 75%;
     transition: all 0.25s ease-in-out;
   }
 
@@ -196,9 +189,8 @@
   }
 
   section#skills > div.content-container > div.content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    display: grid;
+    place-items: center;
     background-color: none;
     border-radius: 10px;
     padding: 30px 30px 0;
