--- a/styles/style.css
+++ b/styles/style.css
@@ -30,6 +30,19 @@ body > div.container {
   transition: margin-bottom 0.1s ease-in-out;
 }
 
+section {
+  min-height: 100vh;
+  display: grid;
+  place-items: center;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 3fr;
+}
+
+section#about {
+  padding-top: 2rem;
+  min-height: auto;
+}
+
 section#about > div.content > p {
   text-align: left;
   margin-bottom: 0;
@@ -63,9 +76,8 @@ section#skills > div.content-container {
 }
 
 section#skills > div.content-container > div.content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: grid;
+  place-items: center;
   background-color: var(--lighter-color);
   border-radius: 10px;
   padding: 30px 30px 0;
@@ -169,7 +181,7 @@ a.social-link {
   fill: white;
 }
 
-header > nav > ul > li:nth-of-type(4) {
+header > nav > ul > li:nth-of-type(5) {
   visibility: hidden;
   position: absolute;
 }
