--- a/styles/navigation.css
+++ b/styles/navigation.css
@@ -33,6 +33,7 @@ nav > ul > li > a:hover {
   padding: 0.75rem 2rem;
   border-radius: 2px;
   color: white;
+  text-decoration: none;
 }
 
 #main-navigation > ul > li:nth-of-type(4) > a:hover {
