--- a/styles/media-queries.css
+++ b/styles/media-queries.css
@@ -97,7 +97,7 @@
     min-height: var(--sm-pfolio-img);
     border-radius: 50%;
     border: 8px solid var(--dark-sf);
-    background-image: url("../assets/imgs/me_500x500.png");
+    background-image: url("../assets/imgs/me_500x500.webp");
     background-position: center;
     background-size: cover;
   }
