--- a/styles/style.css
+++ b/styles/style.css
@@ -242,6 +242,7 @@ div#project-slideshow-img {
   width: 100%;
   height: 100%;
   opacity: 100%;
+  z-index: 10;
   border: none;
   color: var(--dark-sf);
   background-color: var(--lighter-sf);
@@ -264,7 +265,10 @@ div#project-slideshow-img {
 }
 
 .project-slideshow-content > div {
+  display: grid;
+  place-items: center;
   padding: 2rem 3rem;
+  z-index: 9;
 }
 
 .project-slideshow-content-upper {
@@ -287,28 +291,30 @@ div#project-slideshow-img {
   filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.2));
 }
 
-.project-slideshow-content-lower {
+/* .project-slideshow-content-lower {
   display: grid;
   justify-content: start;
   align-content: end;
-  width: 100%;
+  width: 110%;
   height: 100%;
   opacity: 30%;
   background-color: var(--dark-sf);
-  transform: translateY(60%);
+  transform: translateY(60%) translateX(-5%) rotate(5deg);
   transition: all 0.25s ease-in-out;
 
-  /* Wave Mask */
-  --mask: radial-gradient(92.53px at 50% 125.4px, #000 99%, #0000 101%)
+   --wave-mask: radial-gradient(92.53px at 50% 125.4px, #000 99%, #0000 101%)
       calc(50% - 88px) 0/176px 100%,
     radial-gradient(92.53px at 50% -81.4px, #0000 99%, #000 101%) 50% 44px/176px
       100% repeat-x;
-  -webkit-mask: var(--mask);
-  mask: var(--mask);
+  -webkit-mask: var(--wave-mask);
+  mask: var(--wave-mask);
 }
+*/
 
+/*
 .project-slideshow-content-lower:hover {
   opacity: 100%;
+  width: 100%;
   transform: none;
 }
 
@@ -317,3 +323,4 @@ div#project-slideshow-img {
   height: fit-content;
   width: fit-content;
 }
+*/
