--- a/styles/slideshow.css
+++ b/styles/slideshow.css
@@ -72,7 +72,7 @@ div#project-slideshow-img {
   width: 100%;
 }
 
-.project-slideshow-content-upper > a {
+#project-slideshow-link {
   font-size: var(--xl-text-size);
   font-weight: var(--medium-text-weight);
   color: var(--dark-sf);
@@ -80,7 +80,7 @@ div#project-slideshow-img {
   width: fit-content;
 }
 
-.project-slideshow-content-upper > a:hover {
+#project-slideshow-link:hover {
   color: white;
   filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.2));
 }
@@ -112,7 +112,7 @@ p.project-slideshow-content-lower:hover {
   transform: none;
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (min-width: 650px) and (max-width: 1200px) {
   div#project-slideshow {
     height: 35vh;
   }
@@ -136,6 +136,10 @@ p.project-slideshow-content-lower:hover {
 }
 
 @media screen and (max-width: 650px) {
+  #project-slideshow {
+    height: 25vh;
+  }
+
   .project-slideshow-content {
     grid-template-rows: 25% 75%;
   }
@@ -146,14 +150,21 @@ p.project-slideshow-content-lower:hover {
     transition: all 0.1s linear;
   }
 
+  .project-slideshow-content > div,
   #project-slideshow-link {
-    font-size: var(--lg-text-size);
+    padding: 0.25rem 1rem;
+    font-size: var(--md-text-size);
+  }
+
+  #slideshow-controls > div > p > span {
+    font-size: 12px;
   }
 
   p.project-slideshow-content-lower {
     width: 160%;
     transform: translateY(50%) translateX(-16%);
-    font-size: var(--sm-text-size);
+    font-size: 12px;
+    font-weight: var(--light-text-weight);
   }
 
   p.project-slideshow-content-lower:hover {
@@ -172,6 +183,9 @@ p.project-slideshow-content-lower:hover {
 
   #next-btn {
     transform: translateX(-10px);
+  }
+  #previous-btn {
+    transform: translateX(10px);
   }
 
   .project-slideshow-content > div,
@@ -192,6 +206,11 @@ p.project-slideshow-content-lower:hover {
     transform: translateX(-18%);
   }
 
+  #slideshow-controls > div > p > span,
+  p.project-slideshow-content-lower {
+    font-size: 10px;
+  }
+
   #slideshow-controls > button {
     font-size: 2rem;
     display: grid;
@@ -202,11 +221,24 @@ p.project-slideshow-content-lower:hover {
     z-index: 9;
   }
 
-  #project-slideshow-link {
-    font-size: var(--md-text-size);
-  }
-
   .project-slideshow-content > div {
     padding: 1rem 0 0;
+  }
+}
+
+@media screen and (min-width: 400px) and (max-width: 550px) {
+}
+
+@media screen and (max-width: 399px) {
+  p.project-slideshow-content-lower {
+    position: absolute;
+    visibility: hidden;
+  }
+
+  #next-btn {
+    transform: translateY(120%) translateX(-10px);
+  }
+  #previous-btn {
+    transform: translateY(120%) translateX(10px);
   }
 }
